tests/snapshots/run_wpt_conformance__coreml_expand_float32_2D_tensor_to_2D__all_dimensions_.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "expand.https.any.js",
    "expand float32 2D tensor to 2D (all dimensions)",
    "coreml",
    "PASS",
)
